--- a/create_nft_swap_form_polygonx.html
+++ b/create_nft_swap_form_polygonx.html
@@ -235,6 +235,29 @@ var abi = [
 		"type": "function"
 	},
 	{
+		"inputs": [
+			{
+				"internalType": "contract ERC721",
+				"name": "_nftAddress",
+				"type": "address"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_tokenId1",
+				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_num",
+				"type": "uint256"
+			}
+		],
+		"name": "add_to_offer",
+		"outputs": [],
+		"stateMutability": "payable",
+		"type": "function"
+	},
+	{
 		"inputs": [],
 		"stateMutability": "nonpayable",
 		"type": "constructor"
@@ -1075,7 +1098,7 @@ var abi = [
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1207,7 +1230,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	var contract_address = web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+	var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1261,7 +1284,7 @@ var acct = (async function(){
 	console.log(amt);
 	console.log(_amt);
 	
- 	//var contract_address1 = web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+ 	//var contract_address1 = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
         var _data = new web3.eth.Contract(abi, contract_address).methods.create_debt_obligation(add1x).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
@@ -1305,15 +1328,17 @@ var acct = (async function(){
 	
 	
 	var num = await contract_bal.methods.last().call();
-	console.log(num);
-	
+	console.log("num: " + num);
+	var n = parseInt(num);
+	var _n = n + 1
+	console.log("_n: " + _n)
 	console.log(nft_k);
 	console.log(nft_id);
 	console.log(loan_amt);
 	console.log(loan_term);
  	var contract = web3.utils.toChecksumAddress(nft_k);
 	
-        var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, num + 1).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.offer_trade(contract, nft_id, loan_amt, loan_term, _n).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
@@ -1493,7 +1518,7 @@ var acct = (async function(){
 	//var add1x = localStorage.getItem("mySharedData");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x05a30418b7c747ed96830b14097a6e18219ad5f6", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
@@ -1517,7 +1542,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-var contract_address = await web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
 var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 var contract_bal = await new web3.eth.Contract(abi, contract_address);
 var totalSupply = await contract_bal.methods.baseURI().call();
@@ -1549,7 +1574,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	var contract_address = web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+	var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1586,7 +1611,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+  var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1623,7 +1648,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+  var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1642,7 +1667,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   
 	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1682,7 +1707,7 @@ q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
 
 	await window.ethereum.enable();
-  	var contract_address = await web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1735,7 +1760,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x05a30418b7c747ed96830b14097a6e18219ad5f6")
+  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
