--- a/create_nft_swapx.html
+++ b/create_nft_swapx.html
@@ -180,6 +180,29 @@ var abi = [
 		"type": "function"
 	},
 	{
+		"inputs": [
+			{
+				"internalType": "contract ERC721",
+				"name": "_nftAddress",
+				"type": "address"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_tokenId1",
+				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_num",
+				"type": "uint256"
+			}
+		],
+		"name": "add_to_offer",
+		"outputs": [],
+		"stateMutability": "payable",
+		"type": "function"
+	},
+	{
 		"inputs": [],
 		"stateMutability": "nonpayable",
 		"type": "constructor"
@@ -1014,12 +1037,13 @@ var abi = [
 		"type": "function"
 	}
 ]
+
 	//localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
 	//localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1250,7 +1274,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	var contract_address = web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+	var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1569,7 +1593,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
@@ -1591,7 +1615,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-var contract_address = await web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
 var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 var contract_bal = await new web3.eth.Contract(abi, contract_address);
 var totalSupply = await contract_bal.methods.baseURI().call();
@@ -1623,7 +1647,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	var contract_address = web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+	var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1660,7 +1684,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+  var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1692,7 +1716,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+  var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1711,7 +1735,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   
 	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1749,7 +1773,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1792,7 +1816,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0x00db607ba28bdc844f2822ffe38d8da70ba3fed1")
+  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
