--- a/create_nft_swap_form_polygonx.html
+++ b/create_nft_swap_form_polygonx.html
@@ -243,6 +243,29 @@ var abi = [
 			},
 			{
 				"internalType": "uint256",
+				"name": "_tokenId",
+				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_num",
+				"type": "uint256"
+			}
+		],
+		"name": "add_to_accept",
+		"outputs": [],
+		"stateMutability": "payable",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "contract ERC721",
+				"name": "_nftAddress",
+				"type": "address"
+			},
+			{
+				"internalType": "uint256",
 				"name": "_tokenId1",
 				"type": "uint256"
 			},
@@ -255,6 +278,24 @@ var abi = [
 		"name": "add_to_offer",
 		"outputs": [],
 		"stateMutability": "payable",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "address",
+				"name": "_approved",
+				"type": "address"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_tokenId",
+				"type": "uint256"
+			}
+		],
+		"name": "approve",
+		"outputs": [],
+		"stateMutability": "nonpayable",
 		"type": "function"
 	},
 	{
@@ -311,24 +352,6 @@ var abi = [
 		],
 		"name": "ApprovalForAll",
 		"type": "event"
-	},
-	{
-		"inputs": [
-			{
-				"internalType": "address",
-				"name": "_approved",
-				"type": "address"
-			},
-			{
-				"internalType": "uint256",
-				"name": "_tokenId",
-				"type": "uint256"
-			}
-		],
-		"name": "approve",
-		"outputs": [],
-		"stateMutability": "nonpayable",
-		"type": "function"
 	},
 	{
 		"inputs": [
@@ -917,6 +940,30 @@ var abi = [
 		"inputs": [
 			{
 				"internalType": "uint256",
+				"name": "num",
+				"type": "uint256"
+			},
+			{
+				"internalType": "address",
+				"name": "_offeror",
+				"type": "address"
+			}
+		],
+		"name": "token_contracts_list1xyCount",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "uint256",
 				"name": "",
 				"type": "uint256"
 			},
@@ -961,6 +1008,30 @@ var abi = [
 				"internalType": "contract ERC721",
 				"name": "",
 				"type": "address"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "uint256",
+				"name": "num",
+				"type": "uint256"
+			},
+			{
+				"internalType": "address",
+				"name": "_offeror",
+				"type": "address"
+			}
+		],
+		"name": "token_contracts_list2xyCount",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
 			}
 		],
 		"stateMutability": "view",
@@ -1098,7 +1169,7 @@ var abi = [
 	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+var contract_address = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
 
 var contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -1230,7 +1301,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+	var contract_address = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1284,7 +1355,7 @@ var acct = (async function(){
 	console.log(amt);
 	console.log(_amt);
 	
- 	//var contract_address1 = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+ 	//var contract_address1 = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
         var _data = new web3.eth.Contract(abi, contract_address).methods.create_debt_obligation(add1x).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
@@ -1518,7 +1589,7 @@ var acct = (async function(){
 	//var add1x = localStorage.getItem("mySharedData");
 	
  	var contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x7e4e8288571f82952e0917afbf3a8718fc428344", nft_id).encodeABI();
         var accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         var account = accounts[0];
 	var result = await web3.eth.getTransactionCount(account)
@@ -1542,7 +1613,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
 var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 var contract_bal = await new web3.eth.Contract(abi, contract_address);
 var totalSupply = await contract_bal.methods.baseURI().call();
@@ -1574,7 +1645,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	var contract_address = web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+	var contract_address = web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
   	
 	
 	var contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1611,7 +1682,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+  var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1648,7 +1719,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+  var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
   var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1667,7 +1738,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+  	var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
   
 	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1707,7 +1778,7 @@ q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
 
 	await window.ethereum.enable();
-  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+  	var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1760,7 +1831,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0xac4e1fd17fb7009b855fbf1810b9b16cad9c5969")
+  	var contract_address = await web3.utils.toChecksumAddress("0x7e4e8288571f82952e0917afbf3a8718fc428344")
   	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
